--- a/src/components/ImageCarousel.css
+++ b/src/components/ImageCarousel.css
@@ -37,4 +37,9 @@
     height: 100%;
     object-fit: cover; 
   }
+  .no-data-message {
+    color: #fff;
+    text-align: center;
+    margin-top: 20px;
+  }
   
